feat(service_requests): add new api methods for waivers and service orders
add new api methods for waivers and service orders
