# specs/swagger.json
@@ -878,6 +878,85 @@
         }
       }
     },
+    "/service_accounts/{id}/service_orders": {
+      "get": {
+        "tags": [
+          "service_accounts"
+        ],
+        "summary": "Gets the list of service orders for a service account.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id of service account to fetch",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "200 returns service orders for a service account",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "Service_Order_Description": {
+                        "type": "string"
+                      },
+                      "Date_Processed": {
+                        "type": "string",
+                        "format": "date-time"
+                      },
+                      "Distributor_Name": {
+                        "type": "string"
+                      },
+                      "Priority_Code": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                },
+                "example": [
+                  {
+                    "Service_Order_Description": "Reconnect Complete",
+                    "Date_Processed": "05/02/2019",
+                    "Distributor_Name": "AEP - Texas Central",
+                    "priority_code": ""
+                  },
+                  {
+                    "Service_Order_Description": "Initiate Reconnect",
+                    "Date_Processed": "05/02/2019",
+                    "Distributor_Name": "AEP - Texas Central",
+                    "priority_code": "01"
+                  }
+                ]
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error_list"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Service Account not found"
+          }
+        }
+      }
+    },
     "/service_accounts/{id}/Meter_Read_Details/{count}": {
       "get": {
         "tags": [
@@ -1320,6 +1399,173 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/service_accounts/{id}/standard_waivers": {
+      "get": {
+        "tags": [
+          "service_accounts"
+        ],
+        "summary": "Retrieves standard waivers for a service account",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id of service account to get waivers",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "200 returns service account waivers",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "FeeCreationDate": {
+                        "type": "string",
+                        "format": "date-time"
+                      },
+                      "FeeType": {
+                        "type": "string"
+                      },
+                      "Fee": {
+                        "type": "string"
+                      },
+                      "Tax": {
+                        "type": "string"
+                      },
+                      "WaiveStatus": {
+                        "type": "string"
+                      },
+                      "Description": {
+                        "type": "string"
+                      },
+                      "FeeWaiverType": {
+                        "type": "string",
+                        "enum": [
+                          "Late_Fee",
+                          "NSF Fees",
+                          "Disconnect & Reconnect Fees",
+                          "Disconnect letter Fees"
+                        ]
+                      }
+                    }
+                  }
+                },
+                "example": [
+                  {
+                    "FeeCreationDate": "06/14/2019",
+                    "FeeType": "ServicePending",
+                    "Fee": 6.82,
+                    "Tax": 0.14756434,
+                    "WaiveStatus": "None",
+                    "Description": "",
+                    "FeeWaiverType": "Late_Fee"
+                  },
+                  {
+                    "FeeCreationDate": "03/31/2019",
+                    "FeeType": "ServicePending",
+                    "Fee": 7.29,
+                    "Tax": 0.15773373,
+                    "WaiveStatus": "None",
+                    "Description": "",
+                    "FeeWaiverType": "Late_Fee"
+                  }
+                ]
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error_list"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Service Account not found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "service_accounts"
+        ],
+        "summary": "Requests a waiver for the service account.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id of the service account for which the waiver is requested.",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/waiver_request"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "200 returns a success flag",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "Is_Success": {
+                      "type": "boolean"
+                    },
+                    "Description": {
+                      "type": "boolean"
+                    }
+                  }
+                },
+                "example": {
+                  "Is_Success": true,
+                  "Description": ""
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error_list"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Service Account not found"
           }
         }
       }
@@ -2719,6 +2965,27 @@
           },
           "Followup_Ind": {
             "type": "number"
+          }
+        }
+      },
+      "waiver_request": {
+        "type": "object",
+        "properties": {
+          "Notes": {
+            "type": "string"
+          },
+          "FeeCreationDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "FeeWaiverType": {
+            "type": "string",
+            "enum": [
+              "Late_Fee",
+              "NSF Fees",
+              "Disconnect & Reconnect Fees",
+              "Disconnect letter Fees"
+            ]
           }
         }
       },
